# near-sc-security-course

near-section/: .gitignore  Cargo.toml  build.sh
near-section/abi/: contract_exploit_abi.json  staking_abi.json
near-section/contracts/access-control/exploit/: Cargo.toml
near-section/contracts/access-control/exploit/src/: lib.rs
near-section/contracts/access-control/victim/: Cargo.toml
near-section/contracts/access-control/victim/src/: lib.rs
near-section/contracts/denial-of-service/: Cargo.toml
near-section/contracts/denial-of-service/src/: lib.rs
near-section/contracts/logical/: Cargo.toml
near-section/contracts/logical/src/: lib.rs
near-section/contracts/race-condition/deposit/: Cargo.toml  exploit.sh
near-section/contracts/race-condition/deposit/src/: lib.rs  storage.rs
near-section/contracts/race-condition/exploit/: Cargo.toml  deploy.sh
near-section/contracts/race-condition/exploit/src/: lib.rs
near-section/contracts/race-condition/staking/: Cargo.toml
near-section/contracts/race-condition/staking/src/: lib.rs
near-section/tests/: integration.rs
rust-section/: Cargo.toml
